# shorter_links

./: .gitignore  LETTER.md  README.md  pyproject.toml  url_shortener.db
src/: __init__.py  main.py
src/api/: __init__.py
src/api/routes/: __init__.py  health.py  urls.py
src/core/: __init__.py  config.py  database.py
src/db/: database.py
src/models/: __init__.py  models.py  url.py
src/schemas/: __init__.py  url.py
src/utils/: __init__.py  shortener.py
tests/: __init__.py  test_main.py
